--- a/app/src/main/res/layout/activity_product_details_buyer.xml
+++ b/app/src/main/res/layout/activity_product_details_buyer.xml
@@ -147,7 +147,7 @@
                 android:id="@+id/tv_comments_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="User Comments"
+                android:text="Comments"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"
