--- a/app/src/main/res/layout/fragment_home_buyer.xml
+++ b/app/src/main/res/layout/fragment_home_buyer.xml
@@ -62,13 +62,29 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/label_central_components"
-                android:layout_width="wrap_content"
+            <!-- Central Components -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Central Components"
-                android:textSize="18sp"
-                android:layout_margin="16dp"/>
+                android:orientation="horizontal"
+                android:layout_margin="16dp">
+
+                <TextView
+                    android:id="@+id/label_central_components"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Central Components"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/text_see_all_central"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="See All"
+                    android:textColor="@color/colorAccent"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager_central_components"
@@ -76,13 +92,29 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/viewpager_background"/>
 
-            <TextView
-                android:id="@+id/label_body"
-                android:layout_width="wrap_content"
+            <!-- Body -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Body"
-                android:textSize="18sp"
-                android:layout_margin="16dp"/>
+                android:orientation="horizontal"
+                android:layout_margin="16dp">
+
+                <TextView
+                    android:id="@+id/label_body"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Body"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/text_see_all_body"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="See All"
+                    android:textColor="@color/colorAccent"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager_body"
@@ -90,13 +122,29 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/viewpager_background"/>
 
-            <TextView
-                android:id="@+id/label_connectors"
-                android:layout_width="wrap_content"
+            <!-- Connectors -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Connectors"
-                android:textSize="18sp"
-                android:layout_margin="16dp"/>
+                android:orientation="horizontal"
+                android:layout_margin="16dp">
+
+                <TextView
+                    android:id="@+id/label_connectors"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Connectors"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/text_see_all_connectors"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="See All"
+                    android:textColor="@color/colorAccent"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager_connectors"
@@ -104,13 +152,29 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/viewpager_background"/>
 
-            <TextView
-                android:id="@+id/label_peripherals"
-                android:layout_width="wrap_content"
+            <!-- Peripherals -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Peripherals"
-                android:textSize="18sp"
-                android:layout_margin="16dp"/>
+                android:orientation="horizontal"
+                android:layout_margin="16dp">
+
+                <TextView
+                    android:id="@+id/label_peripherals"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Peripherals"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/text_see_all_peripherals"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="See All"
+                    android:textColor="@color/colorAccent"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager_peripherals"
