--- a/app/src/main/res/layout/activity_product_details_buyer.xml
+++ b/app/src/main/res/layout/activity_product_details_buyer.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp">
 
     <ScrollView
@@ -20,22 +21,31 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager"
                 android:layout_width="0dp"
-                android:layout_height="200dp"
+                android:layout_height="250dp"
                 android:background="@drawable/viewpager_background"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <ImageView
-                android:id="@+id/iv_seller_profile"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="8dp"
-                android:contentDescription="Seller Profile Image"
+                android:elevation="4dp"
+                app:cardCornerRadius="100dp"
                 app:layout_constraintTop_toBottomOf="@id/viewPager"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/tv_seller_name"
-                android:scaleType="centerCrop"/>
+                app:layout_constraintEnd_toStartOf="@+id/tv_seller_name">
+
+                <ImageView
+                    android:id="@+id/iv_seller_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:contentDescription="@string/seller_profile_image_desc"
+                    android:src="@drawable/gear"/>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/tv_seller_name"
@@ -44,12 +54,11 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@id/viewPager"
-                app:layout_constraintStart_toEndOf="@id/iv_seller_profile"
+                app:layout_constraintStart_toEndOf="@id/cv"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <!-- Product Name Label and Value in Same Row -->
             <TextView
                 android:id="@+id/tv_label_product_name"
                 android:layout_width="wrap_content"
@@ -58,7 +67,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/iv_seller_profile"
+                app:layout_constraintTop_toBottomOf="@id/cv"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
@@ -68,11 +77,10 @@
                 android:textSize="16sp"
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
-                app:layout_constraintTop_toBottomOf="@id/iv_seller_profile"
+                app:layout_constraintTop_toBottomOf="@id/cv"
                 app:layout_constraintStart_toEndOf="@id/tv_label_product_name"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <!-- Product Price Label and Value in Same Row -->
             <TextView
                 android:id="@+id/tv_label_product_price"
                 android:layout_width="wrap_content"
@@ -95,7 +103,6 @@
                 app:layout_constraintStart_toEndOf="@id/tv_label_product_price"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <!-- Product Description Label and Value in Same Row -->
             <TextView
                 android:id="@+id/tv_label_product_description"
                 android:layout_width="wrap_content"
@@ -142,7 +149,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <!-- Comments Section -->
             <TextView
                 android:id="@+id/tv_comments_header"
                 android:layout_width="wrap_content"
@@ -164,7 +170,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:nestedScrollingEnabled="false"/>
 
-            <!-- EditText for new comment -->
             <EditText
                 android:id="@+id/et_new_comment"
                 android:layout_width="0dp"
@@ -176,7 +181,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/iv_send_comment"/>
 
-            <!-- Send comment button -->
             <ImageView
                 android:id="@+id/iv_send_comment"
                 android:layout_width="wrap_content"
@@ -191,7 +195,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
-    <!-- Add to Cart Button -->
     <Button
         android:id="@+id/btn_add_to_cart"
         android:layout_width="0dp"
