--- a/app/src/main/res/layout/dialog_add_review.xml
+++ b/app/src/main/res/layout/dialog_add_review.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
+
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:numStars="5"
+        android:stepSize="1.0"
+        android:rating="0" />
 
     <EditText
         android:id="@+id/et_review"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your review"
-        android:inputType="textMultiLine"
-        android:gravity="top"
-        android:lines="4"
-        android:maxLines="6"/>
+        android:hint="Write your review" />
 
     <Button
         android:id="@+id/btn_submit_review"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit Review"
-        android:layout_gravity="end"
-        android:backgroundTint="#2196F3"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="8dp"/>
+        android:text="Submit Review" />
 </LinearLayout>
