--- a/app/src/main/res/layout/fragment_home_buyer.xml
+++ b/app/src/main/res/layout/fragment_home_buyer.xml
@@ -46,7 +46,7 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:layout_marginEnd="13dp"
-            android:src="@drawable/message"
+            android:src="@drawable/messenger"
             android:contentDescription="Messages"/>
     </LinearLayout>
 
