--- a/app/src/main/res/layout/fragment_home_seller.xml
+++ b/app/src/main/res/layout/fragment_home_seller.xml
@@ -49,7 +49,7 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:layout_marginEnd="13dp"
-            android:src="@drawable/message"
+            android:src="@drawable/messenger"
             android:contentDescription="Messages"/>
 
     </LinearLayout>
